# androidpp

./: .gitignore  CMakeLists.txt  README.md
android/: AndroidManifest.xml
android/java/francescozoccheddu/androidpp/: MainActivity.java
android/res/values/: strings.xml
include/: hello_world.hpp
src/: hello_world.cpp  jni.cpp
